--- a/Phil 2210 - Introduction to Ethics/3. Meta Ethics.tex
+++ b/Phil 2210 - Introduction to Ethics/3. Meta Ethics.tex
@@ -1,4 +1,4 @@
-\documentclass[16pt]{article}
+\documentclass{article}
 \usepackage[english]{babel}
 \usepackage{longtable}
 \usepackage[top=1in, bottom=0.25in, left=1.25in, right=1.25in,includefoot,heightrounded]{geometry}
@@ -64,15 +64,32 @@
                 \item One could be a moral skeptic while still believing that there are inner-subjective values shared across both individuals and cultures.
                 \item These inter subjective values may still not be objective in the sense that they are true for all time.
             \end{itemize}
-            \item 
         \end{enumerate}
-        \item 
+        \item Mackie proposed the following two arguments for his \textbf{moral skepticism position}:
+        \begin{enumerate}
+            \item The argument from the ontological (what exists) and epistemological (what we know) \textbf{weirdness of objective moral values}.
+            \begin{itemize}
+                \item Ontological weirdness: If there are objective moral values, they are not visible nor are they tangible. What kind of things are they? How do we know they exist?
+                \item Epistemological weirdness: Even if there were a plausible ontological account of objective moral values, how could we come to know them?
+            \end{itemize}
+            \item The argument from cultural relativism: \newline Premise | Societies differ markedly in their moral values. \newline Conclusion | There are no objective moral values.
+        \end{enumerate}
     \end{itemize}
 
     \subsection*{Thomas Nagel}
     \begin{itemize}
         \item \textbf{Thomas Nagel} (a moral realist) admits that there is \textbf{atleast one very general value} that is \textbf{objective}.
-        \item 
+        \item \textbf{Thomas Nagel}'s goal is to find \textbf{at least one objective moral value} thereby contradicting \textbf{Mackie's moral skepticism}.
+        \item To find at least one \textbf{objective moral value}, \textbf{Nagel uses "the view from nowhere"}.
+        \item \textbf{The view from nowhere} involves \textbf{bracketing ourselves off} from the \textbf{world} and our \textbf{relationships} with people in the world. Essentially we stand back and look at our lives and the world we live in as a whole.
+        \item According to Nagel, \textbf{the view from nowhere} abandons the \textbf{subjective viewpoint} leaving only an \textbf{objective viewpoint}.
+        \item Nagel argues that \textbf{a maximally objective value} found by \textbf{increasing levels of abstraction} will have \textbf{three characteristics}:
+        \begin{enumerate}
+            \item The value will be \textbf{broad in scope}, it will apply to many different kinds of actions.
+            \item The value will be \textbf{agent-neutral}, meaning it won't involve any reference to anyone.
+            \item The value will be \textbf{external}, meaning that it won't refer to anyone's reasons for acting.
+        \end{enumerate}
+        \item Nagel warns about \textbf{the danger of taking the view from nowhere} is that if the value is \textbf{too abstract} is becomes \textbf{vacuous} (For example: Be good).
     \end{itemize}
 
 \end{document}
