--- a/Phil 2210 - Introduction to Ethics/2. Feminist Theories.tex
+++ b/Phil 2210 - Introduction to Ethics/2. Feminist Theories.tex
@@ -1,4 +1,4 @@
-\documentclass[16pt]{article}
+\documentclass{article}
 \usepackage[english]{babel}
 \usepackage{longtable}
 \usepackage[top=1in, bottom=0.25in, left=1.25in, right=1.25in,includefoot,heightrounded]{geometry}
