Worked on Phil 2210 meta ethics note

--- a/Phil 2210 - Introduction to Ethics/3. Meta Ethics.tex
+++ b/Phil 2210 - Introduction to Ethics/3. Meta Ethics.tex
@@ -92,4 +92,50 @@
         \item Nagel warns about \textbf{the danger of taking the view from nowhere} is that if the value is \textbf{too abstract} is becomes \textbf{vacuous} (For example: Be good).
     \end{itemize}
 
+    \section*{\centering{The Nature of Moral Explanation}}
+
+    \subsection*{Gilbert Harman's Ethics and Observation}
+    \begin{itemize}
+        \item \textbf{Gilbert Harman} investiages the possibility that \textbf{ethics is objective like science}, given that both can be \textbf{judged} using \textbf{thought experiments}.
+        \item If \textbf{ethics} is \textbf{analogous to science}, then just as \textbf{scientific theories} can be \textbf{supported (corroborated) by observation}, so can \textbf{ethical theories}.
+        \item Harman contends that \textbf{scientific theories entail scientific law}. He then goes on to provide an example of an \textbf{observation} that is \textbf{NOT explained} by any \textbf{moral theory} (Someone observers kids burning a cat, and says it is morally wrong. The observation does not corroborate the theory that burning cats is morally wrong).
+        \item Due to his counterexample, \textbf{observation does not corroborate theory} in ethics.
+        \item In \textbf{science}, the \textbf{theory explains the observation}. In \textbf{ethics}, the \textbf{theory} does \textbf{not explain the oberservation}. Therefore \textbf{ethics} is \textbf{not a branch of science}. Hence \textbf{ethics is not analogous to science}.
+        \item Harman then suggest that \textbf{ethics} is more like \textbf{mathematics} than it is like a \textbf{science}. \textbf{Mathematical statements do not explain observations} nor are they \textbf{corroborated by them}. Instead \textbf{theorems are derived from axioms, not observation}.
+        \item Harman concludes that \textbf{ethics is not like mathematics} as \textbf{science uses mathematics}, thus \textbf{mathematics are indirectly corroborated by observation}.
+        \item Since \textbf{ethics} is not \textbf{analogous to science or mathematics}, therefore \textbf{it is not objective}. Thus \textbf{ethics is subjective}.
+    \end{itemize}
+
+    \subsection*{Nicholas Sturgeon's Moral Explanations}
+    \begin{itemize}
+        \item \textbf{Nicholas Sturgeon} has an issue with \textbf{Harman's burning of the cat example}. He argues that indeed, \textbf{mainstream moral theories} do explain why the \textbf{kids burned the cat}, thus the \textbf{observation does corroborate the moral theory}.
+        \item He claims that the theory that the \textbf{mainstream moral theories} entail that \textbf{anyone who burns a cat for fun} is suffering from \textbf{moral depravity}.
+        \item Therefore \textbf{ethical theories} are \textbf{no worse} than \textbf{scientific theories}.
+    \end{itemize}
+
+    \section*{\centering{The Meaning of Moral Terms}}
+    
+    \subsection*{G.E. Moore}
+    \begin{itemize}
+        \item \textbf{G.E. Moore} comments extensively on \textbf{the meaning} of the term \textbf{"good"} in a famous work called the \textbf{Principia Ethica}.
+        \item He argues against the tendency to \textbf{equate "good"} with a \textbf{set of natural properties} given such considerations as the following:
+        \begin{enumerate}
+            \item If we try to identify the term good with a natural property such as pleasure (like Mill did) then we have: Pleasure is good. But if good is nothing but pleasure, the statement "Good is pleasure" becomes "Pleasure is pleasure", which is a vacuous statement.
+            \item The term "good" satisfies different criteria in different contexts.
+        \end{enumerate}
+        \item Moore claims that trying to \textbf{define "good"} in terms of \textbf{natural properties} commits the \textbf{"naturalistic fallacy"}; it is an \textbf{error} in \textbf{reasoning} that involves \textbf{inferring values from facts}.
+        \item He claims that the same is true for \textbf{perceptual terms} (such as color). They \textbf{cannot be identified} with \textbf{natural properties}.
+    \end{itemize}
+
+    \subsection*{A.J. Ayer}
+    \begin{itemize}
+        \item \textbf{A.J. Ayer} claims that \textbf{statements of ethics, theology, and aesthetics} are all \textbf{meaningless} since they are \textbf{neither truths of logic} nor \textbf{empirically verifiable}. For example:
+        \begin{enumerate}
+            \item Theology | God exists.
+            \item Ethics | Stealing is wrong.
+            \item Aesthetics | This painting is beautiful.
+        \end{enumerate}
+        \item
+    \end{itemize}
+
 \end{document}
