--- a/Comp 3670 - Computer Networks/3. Transport Layer.tex
+++ b/Comp 3670 - Computer Networks/3. Transport Layer.tex
@@ -1,4 +1,4 @@
-\documentclass[16pt]{article}
+\documentclass{article}
 \usepackage[english]{babel}
 \usepackage{longtable}
 \usepackage[top=1in, bottom=0.25in, left=1.25in, right=1.25in,includefoot,heightrounded]{geometry}
