Worked on Comp 3670 network layer note

--- a/Comp 3300 - Operation System Fundamentals/8. Main Memory.tex
+++ b/Comp 3300 - Operation System Fundamentals/8. Main Memory.tex
@@ -190,4 +190,11 @@
         \item[] \includegraphics[width=\textwidth - 25pt]{images/Inverted-Page-Table.png}
     \end{itemize}
 
+    \subsection*{Segmentation}
+    \begin{itemize}
+        \item \textbf{Segmentation} is a \textbf{memory-managment scheme} that supports the \textbf{user view of memory}.
+        \item A \textbf{program} is a \textbf{collection of segments}; a segment is a logical unit (such as a function, method, object, array, variable, stack, common block, symbol table, etc).
+        \item Unlike pages, the sizes of segments can change from segment to segment.
+    \end{itemize}
+
 \end{document}
