Started working on Comp 3670 network layer part 2 note

--- a/Comp 3670 - Computer Networks/4. Network Layer.tex
+++ b/Comp 3670 - Computer Networks/4. Network Layer.tex
@@ -311,6 +311,15 @@
         \end{itemize}
         \item Even with all of th controversy, NAT is here to stay. It is extensively used in home and institutional networks, and 4G/5G cellular networks.
     \end{itemize}
+    
+    \subsection*{Middlebox Functions}
+    \begin{itemize}
+        \item A \textbf{Middlebox} is an \textbf{intermediary box} that performs \textbf{functions} \textbf{apart from the noraml, standard functions} of an \textbf{IP router} on the \textbf{data path} between a \textbf{source host} and a \textbf{destination host}.
+        \item Some exampls of middleboxes are firewalls, NAT, load balancers, CDN cache, etc.
+        \item Initially, \textbf{middleboxes were proprietary} hardware solutions.
+        \item Over time, things moved towards \textbf{open solutions} with \textbf{programmable local actions} via match+action.
+        \item \textbf{Software-Defined Networking (SDN)} allows for \textbf{logically centralized control} and \textbf{configuration managment}, often in the \textbf{"cloud"}.
+    \end{itemize}
 
     \section*{\centering{Internet Protocol version 6 (IPv6)}}
     
@@ -323,5 +332,5 @@
         \item Tunneling is used extensively in other contexts such as 4G/5G.
         \item[] \includegraphics*[width=\textwidth - 25pt]{images/IPv6-Format.PNG}
     \end{itemize}
-
+    
 \end{document}
