--- a/Comp 3670 - Computer Networks/5. Network Layer Part 2.tex
+++ b/Comp 3670 - Computer Networks/5. Network Layer Part 2.tex
@@ -119,4 +119,10 @@
         \item There are more efficient implementations that are $\text{O}(n\log{n})$.
     \end{itemize}
 
+    \subsection*{The Distance Vector Algorithm}
+    \begin{itemize}
+        \item The \textbf{Distance Vector Algorithm} is based on \textbf{Bellman-Ford's equation}: Let $D_x(y)$ denote the cost of the least-cost path from x to y. Then $D_x(y)=min\{c_{x,v} + D_v(y)\}$.
+        \item From time to time, each node sends its own distance vector estimate to neighboring nodes. This distance vector can be used by the distance vector algorithm to allow nodes to compute the least-cost path.
+    \end{itemize}
+
 \end{document}
