--- a/Comp 3670 - Computer Networks/5. Network Layer Part 2.tex
+++ b/Comp 3670 - Computer Networks/5. Network Layer Part 2.tex
@@ -85,44 +85,10 @@
                 \item An example of link state algorithms is Dijkstra's link-state routing algorithm.
             \end{itemize}
             \item \textbf{Distance Vector Algorithms (Decentralized)} | Distance vector algorithms are used routers initially \textbf{only know the link cost to attached neighbors}. This algorithm is \textbf{iterative}, and information needs to be \textbf{exchanged with neighboring routers}.
+            \begin{itemize}
+                \item An example of distance vector algorithms is an algorithm based on Bellman-Ford's equation.
+            \end{itemize}
         \end{enumerate}
-    \end{itemize}
-
-    \subsection*{Dijkstra's Link-State Routing Algorithm}
-    \begin{itemize}
-        \item Notations:
-        \begin{enumerate}
-            \item $C_{x,y}$ | The direct link cost from node $x$ to node $y$. If $x$ and $y$ are not directly connected, $C_{x,y}=\infty$.
-            \item $D(v)$ | The current least-cost-path cost estimate from source to destination $v$.
-            \item $p(v)$ | Predecessor node along path from source to $v$.
-            \item $N'$ | The set of nodes whose least-cost-path is definitively known.
-        \end{enumerate}
-        \item The algorithm:
-        \begin{verbatim}
-    begin
-        N' = {u}
-        for all nodes v
-            if v is adjacent to u
-                D(v) = Cu,v
-            else
-                D(v) = ∞
-        
-        Loop
-            find w net in N' such that D(w) is minimum
-            add w to N'
-            update D(v) for all v adjacent to w and not in N'
-            D(v) = min( D(v), D(w) + Cw,v )
-        Until all nodes are in N'
-    end
-        \end{verbatim}
-        \item The complexity of this algorithm is $\text{O}(n^2)$.
-        \item There are more efficient implementations that are $\text{O}(n\log{n})$.
-    \end{itemize}
-
-    \subsection*{The Distance Vector Algorithm}
-    \begin{itemize}
-        \item The \textbf{Distance Vector Algorithm} is based on \textbf{Bellman-Ford's equation}: Let $D_x(y)$ denote the cost of the least-cost path from x to y. Then $D_x(y)=min\{c_{x,v} + D_v(y)\}$.
-        \item From time to time, each node sends its own distance vector estimate to neighboring nodes. This distance vector can be used by the distance vector algorithm to allow nodes to compute the least-cost path.
     \end{itemize}
 
 \end{document}
